Bug 467670: Bookmark management (part 1), r=gavin

--- a/nl/mobile/chrome/browser.properties
+++ b/nl/mobile/chrome/browser.properties
@@ -1,3 +1,7 @@
+# Bookmarks
+editBookmarkAddFolder=Nieuwe map toevoegen
+editBookmarkNewFolder=Nieuwe map
+
 # Popup Blocker
 popupWarning=%S heeft voorkomen dat deze website een pop-upvenster opende.
 popupWarningMultiple=%S heeft voorkomen dat deze website %S pop-upvensters opende.
