Bug 467670: Bookmark management (part 1).

--- a/fr/mobile/chrome/browser.properties
+++ b/fr/mobile/chrome/browser.properties
@@ -1,3 +1,7 @@
+# Bookmarks
+editBookmarkAddFolder=Ajouter un nouveau dossier
+editBookmarkNewFolder=Nouveau dossier
+
 # Popup Blocker
 popupWarning=%S a empêché ce site d'ouvrir une fenêtre popup.
 popupWarningMultiple=%S a empêché ce site d'ouvrir %S fenêtres popup.
