--- a/sv-SE/browser/chrome/browser/aboutRights.properties
+++ b/sv-SE/browser/chrome/browser/aboutRights.properties
@@ -1,3 +1,3 @@
 buttonLabel = Lär känna dina rättigheter…
 buttonAccessKey = L
-notifyText = %S är fri och öppen programvara från den ideella organisationen Mozilla Foundation.
+notifyRightsText = %S är fri programvara med öppen källkod från den ideella organisationen Mozilla Foundation.
