L10n for bug 480127 - about:rights info bar should use "open source software" not "open software".

--- a/sv-SE/mail/chrome/messenger/aboutRights.properties
+++ b/sv-SE/mail/chrome/messenger/aboutRights.properties
@@ -2,4 +2,4 @@ aboutRightsTitle=Om dina rättigheter
 buttonLabel=Lär känna dina rättigheter…
 buttonAccessKey=L
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
-notifyText=%S är fri och öppen programvara från den ideella organisationen Mozilla Foundation.
+notifyRightsText = %S är fri programvara med öppen källkod från den ideella organisationen Mozilla Foundation.
