Bug 473815 - Improve diagnostics for malformed @font-face rules; r+sr=dbaron

--- a/nl/dom/chrome/layout/css.properties
+++ b/nl/dom/chrome/layout/css.properties
@@ -135,3 +135,5 @@ PEMQExpectedFeatureName=‘%1$S’ gevonden waar naam van media-eigenschap verwa
 PEMQExpectedFeatureNameEnd=‘%1$S’ gevonden waar ‘:’ of ‘)’ achter naam van media-eigenschap verwacht.
 PEMQNoMinMaxWithoutValue=Media-eigenschappen met min- of max- moeten een waarde hebben.
 PEMQExpectedFeatureValue=Ongeldige waarde voor media-eigenschap gevonden.
+PEBadFontBlockStart=‘%1$S’ gevonden waar '{' voor starten van @font-face-regel verwacht.
+PEBadFontBlockEnd=‘%1$S’ gevonden waar '}' voor beëindigen van @font-face-regel verwacht.
