Bug 357593 - PSM cannot display givenName and surname in DNs, r=kaie

--- a/nl/security/manager/chrome/pipnss/pipnss.properties
+++ b/nl/security/manager/chrome/pipnss/pipnss.properties
@@ -121,6 +121,8 @@ CertDumpUserID=UID
 CertDumpPK9Email=E
 CertDumpAVADN=DN
 CertDumpAVADC=DC
+CertDumpSurname=Achternaam
+CertDumpGivenName=Voornaam
 CertDumpValidity=Geldigheid
 CertDumpNotBefore=Niet voor
 CertDumpNotAfter=Niet na
