2 kleine foutjes gevonden door Tonnes

--- a/nl/browser/chrome/browser/preferences/preferences.properties
+++ b/nl/browser/chrome/browser/preferences/preferences.properties
@@ -81,7 +81,7 @@ hostColon=Host:
 domainColon=Domein:
 forSecureOnly=Alleen beveiligde verbindingen
 forAnyConnection=Alle soorten verbindingen
-expireAtEndOfSession=Aan het einde van de sessie
+AtEndOfSession = aan het einde van de sessie
 can=Toestaan
 canSession=Toestaan voor sessie
 cannot=Blokkeren
