bug 479466 - Fix some typos in German Venkman

--- a/de/extensions/venkman/chrome/venkman.properties
+++ b/de/extensions/venkman/chrome/venkman.properties
@@ -69,7 +69,7 @@ err.required.param = Benötigter Parameter %1$S fehlt
 err.invalid.param  = Ungültiger Wert für Parameter %1$S (%2$S)
 # 1 url, 2 fileName, 3 lineNumber, 4 reason
 err.subscript.load = Fehler beim Laden eines Subskripts von <%1$S>.
-err.no.debugger    = JS-Debugger-Service ist nicht installiert. (Vielleicht wurde diese Anwendung mit --disable-jsd erstellt [siehe about:buildconfig], was die für Venkman benötigte Kernunterstützung unterdrückt. Sie können das lösen, indem Sie ohne diese Option neu kompilieren oder sich bei Ihrem Liefernaten beschweren [der dieses Flag nicht verwenden sollte].)
+err.no.debugger    = JS-Debugger-Service ist nicht installiert. (Vielleicht wurde diese Anwendung mit --disable-jsd erstellt [siehe about:buildconfig], was die für Venkman benötigte Kernunterstützung unterdrückt. Sie können das lösen, indem Sie ohne diese Option neu kompilieren oder sich bei Ihrem Lieferanten beschweren [der dieses Flag nicht verwenden sollte].)
 err.failure        = Operation fehlgeschlagen: %1$S
 err.no.stack       = Kein Stack
 
@@ -84,7 +84,7 @@ msn.err.no.command      = Kein Kommando namens ''%1$S''.
 msn.err.no.such.view    = Keine solche Ansicht ''%1$S''.
 msg.err.no.stack        = Kein Stack
 msg.err.no.eval.object  = Kein Objekt für Berechnungen ausgewählt
-msn.err.noscript        = Kein debugbaren Skripte gefunden für ''%1$S''.
+msn.err.noscript        = Keine debugbaren Skripte gefunden für ''%1$S''.
 msn.err.disabled        = Entschuldigung, ''%1$S'' ist momentan deaktiviert
 msn.err.notimplemented  = Entschuldigung, ''%1$S'' ist nicht implementiert
 msn.err.ambigcommand    = Unklares Kommando, ''%1$S'', %2$S Kommandos stimmen mit [%3$S] überein
@@ -97,7 +97,7 @@ msn.err.internal.hook   = Interner Fehler beim Verarbeiten des Hooks ''%1$S''.
 msn.err.failure         = Operation fehlgeschlagen: %1$S
 msn.err.no.section      = Fehlende Sektion vor ''%1$S'' in <%2$S>.
 msn.err.no.template     = Keine Einstellung für eine Vorlage namens ''%1$S''.
-msn.err.not.a.dom.node  = Asudruck "%1$S" ist kein DOM-Knoten.
+msn.err.not.a.dom.node  = Ausdruck "%1$S" ist kein DOM-Knoten.
 msn.err.internal.dispatch  = Interner Fehler beim Senden des Kommandos ''%1$S''.
 msn.err.source.load.failed = Fehler beim Laden der URL <%1$S>: %2$S.
 msn.err.no.such.container  = Kein solcher Container ''%1$S''.
@@ -194,7 +194,7 @@ msg.no.fbreaks.set   = Keine Zukünftigen Haltepunkte gesetzt.
 msg.no.watches.set   = Keine Beobachtungen gesetzt.
 msn.no.properties     = %1$S hat keine Eigenschaften.
 msn.no.cmdmatch      = Keine Kommandos stimmen mit ''%1$S'' überein.
-msn.cmdmatch         = Kommandos, die mit ''%1$S'' übereinstimmen sind [%2$S].
+msn.cmdmatch         = Kommandos, die mit ''%1$S'' übereinstimmen, sind [%2$S].
 msn.cmdmatch.all     = Implementierte Kommandos sind %1$S.
 msn.props.header     = Eigenschaften von %1$S im Bezugsbereich des Debug-Ziels:
 msn.propsd.header    = Eigenschaften von %1$S im Bezugsbereich des Debuggers:
@@ -210,7 +210,7 @@ msn.enter.expression = Geben Sie einen Ausdruck für den neuen Wert von ''%1$S''
 # 1 index, 2 file name, 3 line
 msn.fbp.line         = #%1$S <%2$S> Zeile %3$S
 msn.fbp.created      = Zukünftiger Haltepunkt in <%1$S> Zeile %2$S erstellt.
-msn.fbp.cleared      = Zukünftiger Haltepunkt in <%1$S> Zeile %2$S gelöscht
+msn.fbp.cleared      = Zukünftiger Haltepunkt in <%1$S> Zeile %2$S gelöscht.
 msn.fbp.exists       = Zukünftiger Haltepunkt in <%1$S> Zeile %2$S bereits gesetzt.
 msn.source.line      = %1$S: %2$S"
 msg.emode.ignore     = Fehler werden jetzt ignoriert.
@@ -403,10 +403,10 @@ cmd.hook-fbreak-set.params = <fbreak>
 cmd.hook-fbreak-set.help   = Wird aufgerufen, wenn eine Haltepunkt-Instanz gesetzt wird.
 
 cmd.hook-guess-complete.params = <script-instance>
-cmd.hook-guess-complete.help   = Wird aufgerufen, wenn ein das Erraten eines Funktionsnamens für die Skript-Instanz <script-instance> abgeschlossen wurde.
+cmd.hook-guess-complete.help   = Wird aufgerufen, wenn das Erraten eines Funktionsnamens für die Skript-Instanz <script-instance> abgeschlossen wurde.
 
 cmd.hook-session-display.params = <message> <msgtype>
-cmd.hook-session-display.help   = Wird aufgerufen, wenn eine Nachricht an die interaktive Sitzungsansicht angefügt werden soll. <message> ist die Nachricht als String oder DOM Node, <msgtype> ist der Code des Nachrichtentyps.
+cmd.hook-session-display.help   = Wird aufgerufen, wenn eine Nachricht an die interaktive Sitzungsansicht angefügt werden soll. <message> ist die Nachricht als String oder DOM-Knoten, <msgtype> ist der Code des Nachrichtentyps.
 
 cmd.hook-script-manager-created.params = <script-manager>
 cmd.hook-script-manager-created.help   = Wird aufgerufen, wenn ein neuer Skript-Manager erstellt wird. Skript-Manager delegieren Kommandos zu einem oder mehreren Skript-Instanz-Objekten. <script-manager> wird das neue Skript-Manager-Objekt. Skript-Manager können geschlüsselt nach URL im |console.scriptManagers|-Objekt gefunden werden.
@@ -824,7 +824,7 @@ cmd.save-watches.params = [<settings-file>]
 cmd.save-watches.help   = Die aktuelle Liste der Beobachtungen in einer JavaScript-Datei speichern, sodass sie später wiederhergestellt werden können. Wenn <settings-file> nicht angegeben wird oder ''?'' ist, wird eine Dateiauswahl angezeigt. <settings-file> kann eine Referenz zu einem |LocalFile|-Objekt oder eine String-Repräsentation eines nativen Pfades sein. Siehe auch: |save-settings|, |save-watches|, |restore-settings|.
 
 cmd.search-scripts.params = [<pattern>]
-cmd.search-scripts.help   = Entfernt alle Skripte mit URLs, die nicht mit <pattern> übereinstimmen von der Anscicht für geladene Skripte. Wenn <pattern> nicht angegeben wird, werden alle Skripte angezeigt.
+cmd.search-scripts.help   = Entfernt alle Skripte mit URLs, die nicht mit <pattern> übereinstimmen, von der Ansicht für geladene Skripte. Wenn <pattern> nicht angegeben wird, werden alle Skripte angezeigt.
 
 cmd.session-css.params = [<css>]
 cmd.session-css.help   = Setzt die aktuelle CSS-Datei, die verwendet wird, um die Interaktive Sitzung zu gestalten. Der Wert von <css> kann der Text "default", "dark", "light" ODER eine URL der zu benutzenden CSS-Datei sein. Die "default"-CSS verwendet Ihre Browser-Standards als Vordergrund- und Hintergrundfarben, "dark" ist dunkler Hintergrund mit hellem Text, und "light" ist heller Hintergrund mit dunklem Text. Wenn <css> nicht angegeben wird, dann wird der aktuelle Wert ausgegeben.
@@ -839,7 +839,7 @@ cmd.set-eval-obj.help   = Setzt das aktuelle ''Berechnungsobjekt'', das für das
 
 cmd.scan-source.label  = Nach Meta-Kommentaren &suchen
 cmd.scan-source.params = <script-instance>
-cmd.scan-source.help   = Durchsucht die gesamte Quelldatei nach Kommentaren der Form //@JSD_DIRECTIVE. Standardmäßig werden die Direktiven //@JSD_LOG, //@JSD_BREAK, und //@JSD_EVAL erkannt. JSD_LOG berechnet das nachfolgende Skript und zeichnet das Ergebnis in der Interakitven Sitzungsansicht auf. JSD_BREAK fügt einen bedingten Haltepunkt in der nächsten ausführbaren Zeile ein. JSD_EVAL berechnet das nachfolgende Skript ohne Aufzeichnung oder Anhalten. Benutzer können zusätzliche Direktiven mit Plug-Ins hinzufügen.
+cmd.scan-source.help   = Durchsucht die gesamte Quelldatei nach Kommentaren der Form //@JSD_DIRECTIVE. Standardmäßig werden die Direktiven //@JSD_LOG, //@JSD_BREAK, und //@JSD_EVAL erkannt. JSD_LOG berechnet das nachfolgende Skript und zeichnet das Ergebnis in der Interaktiven Sitzungsansicht auf. JSD_BREAK fügt einen bedingten Haltepunkt in der nächsten ausführbaren Zeile ein. JSD_EVAL berechnet das nachfolgende Skript ohne Aufzeichnung oder Anhalten. Benutzer können zusätzliche Direktiven mit Plug-Ins hinzufügen.
 
 cmd.scope.help = Listet die Eigenschaften des obersten Objekts in der Bezugsbereich-Kette des aktuellen Frames auf.
 
@@ -867,7 +867,7 @@ cmd.show-most-recent.help = Steuert, ob die Ansicht für geladene Skripte nur da
 
 cmd.show-profile.label = Profiling-Daten an&zeigen
 cmd.show-profile.params = [<url> [<...>]]
-cmd.show-profile.help = Zeigt die Profiling-Daten an, die füreine oder mehrere durch <url> angegebene Quelldateien gesammelt wurden. Wenn <url> nicht angegeben wird, werden alle Profiling-Daten gespeichert.
+cmd.show-profile.help = Zeigt die Profiling-Daten an, die für eine oder mehrere durch <url> angegebene Quelldateien gesammelt wurden. Wenn <url> nicht angegeben wird, werden alle Profiling-Daten gespeichert.
 
 cmd.startup-init.label  = Beim &Starten initialisieren
 cmd.startup-init.params = [<toggle>]
