--- a/de/extensions/irc/chrome/chatzilla.properties
+++ b/de/extensions/irc/chrome/chatzilla.properties
@@ -96,6 +96,18 @@ msg.confirm = Bestätigen
 #
 ### DO NOT LOCALIZE THE *.params STRINGS ###
 #
+# Note also that, for every command, an accesskey may be specified:
+#   EITHER by prefixing the desired accesskey with "&" in the .label string,
+#   OR     by specifying a .accesskey string, which is useful if the desired
+#          accesskey does not occur in the label.
+#
+# The following are therefore equivalent:
+#    cmd.foo.label = &Foo
+# and
+#    cmd.foo.label = Foo
+#    cmd.foo.accesskey = F
+#
+#
 # All localised strings may contain certain entities for branding purposes. 
 # The three standard brand entities (brandShortName, brandFullName, vendorName)
 # can all be used like this:
@@ -780,6 +792,8 @@ msg.err.invalid.url   = "%S" ist weder eine gültige URL noch ein Alias für ein
 msg.err.no.channel    = Wenn Sie das "%S"-Kommand ausführen, sollten Sie entweder einen Channel-Namen angeben, oder das Kommando im Kontext eines Channels ausführen.
 msg.err.no.idleservice = ChatZilla kann in Ihrer Version von &brandShortName; nicht feststellen, ob Sie abwesend sind. Die Auto-Abwesenheits-Funktion wird jetzt deaktiviert.
 
+msg.warn.pac.loading = Die Datei für automatische Proxy-Konfiguration wurde noch nicht geladen; ChatZilla wird es in Kürze nochmal versuchen.
+
 # Specific bug messages.
 msg.bug318419.warning = ChatZilla hat eine mögliche Abnormität in seinen internen Daten festgestellt. Sie können keine Art an Kommunikation mehr senden, obwohl es so aussehen kann, als ob das möglich wäre. Der wahrscheinlichste Grund ist Mozilla Bug 318419 <https://bugzilla.mozilla.org/show_bug.cgi?id=318419>. Es wird empfohlen, dass Sie die Host-Anwendung (&brandShortName;) neu starten, um weitere Probleme zu vermeiden.
 msg.bug318419.error   = ChatZilla hat eine ernste Abnormität in seinen internen Daten festgestellt. Sie können keine Art an Kommunikation mehr senden, obwohl es so aussehen kann, als ob das möglich wäre. Der wahrscheinlichste Grund ist Mozilla Bug 318419 <https://bugzilla.mozilla.org/show_bug.cgi?id=318419>. Sie MÜSSEN die Host-Anwendung (&brandShortName;) neu starten, um dieses Problem zu lösen.
@@ -886,6 +900,9 @@ msg.rsp.evin  = [EVAL-IN]
 msg.rsp.evout = [EVAL-OUT]
 msg.rsp.disconnect = [ENDE]
 
+# For these menu labels, too, an accesskey may be specified using a .accesskey
+# string, or by prefixing the desired letter with "&" in the label.
+# The accesskey string should have the form: msg.mnu.<menuname>.accesskey
 msg.mnu.chatzilla  = &ChatZilla
 msg.mnu.irc        = &IRC
 msg.mnu.edit       = B&earbeiten
@@ -904,7 +921,7 @@ msg.is.enabled        = Plugin %S ist bereits aktiviert.
 msg.no.help           = Hilfe nicht verfügbar.
 msg.no.cmdmatch       = Keine Kommandos stimmen mit ''%1$S'' überein.
 msg.no.plugins        = Es sind keine Plugins geladen.
-msg.cmdmatch          = Kommandos, die mit ''%1$S'' übereinstimmen sind [%2$S].
+msg.cmdmatch          = Kommandos, die mit ''%1$S'' übereinstimmen, sind [%2$S].
 msg.default.alias.help = Dieses Kommando ist ein Alias für |%1$S|.
 msg.extra.params      = Zusätzliche Parameter '%1$S' ignoriert.
 msg.version.reply     = ChatZilla %S [%S]
