--- a/de/security/manager/chrome/pipnss/pipnss.properties
+++ b/de/security/manager/chrome/pipnss/pipnss.properties
@@ -121,6 +121,8 @@ CertDumpUserID=UID
 CertDumpPK9Email=E
 CertDumpAVADN=DN
 CertDumpAVADC=DC
+CertDumpSurname=Nachname
+CertDumpGivenName=Vorname
 CertDumpValidity=Validität
 CertDumpNotBefore=Nicht vor
 CertDumpNotAfter=Nicht nach
