changed mail/chrome/messenger/aboutDialog.dtd  changed mobile/chrome/browser.properties

--- a/he/mobile/chrome/browser.properties
+++ b/he/mobile/chrome/browser.properties
@@ -14,4 +14,30 @@ xpinstallDisabledMessageLocked = התקנת תוכנה נוטרלה על־ידי
 xpinstallDisabledMessage=xpinstallDisabledMessage = התקנת תוכנה כרגע מנוטרלת. לחץ אפשור ונסה שוב. 
 xpinstallDisabledButton=אפשור
 xpinstallDisabledButton.accesskey=א
-###################################
+
+# Site Identity
+identity.identified.verifier=אומת על־ידי %S
+identity.identified.verified_by_you=הוספת חריגת אבטחה לאתר זה
+
+identity.identified.state_and_country=%S, %S
+identity.identified.title_with_country=%S (%S)
+identity.encrypted=התקשורת שלך לאתר זה מוצפנת כדי למנוע מקרי האזנה.
+identity.unencrypted=התקשורת שלך לאתר זה לא מוצפנת.
+identity.unknown.tooltip=אתר זה לא מספק מידע זהות.
+identity.ownerUnknown2=(לא ידוע)
+
+# Geolocation UI
+# LOCALIZATION NOTE (exactLocation, neighborhoodLocation): These do not have to be
+# exact value, instead approximations would be fine.
+# examples: Neighborhood (within 2 km)
+#           Exact Location (within 3 m)
+#
+geolocation.exactLocation=מיקום מדוייק (בתוך שלושה מטרים)
+### #!# geolocation.exactLocation.subLabel=within 10 feet
+geolocation.exactLocationKey=מ
+### #!# geolocation.neighborhoodLocation=Neighborhood
+### #!# geolocation.neighborhoodLocation.subLabel=within 1 mile
+### #!# geolocation.neighborhoodLocationKey=N
+geolocation.nothingLocation=כלום
+geolocation.nothingLocationKey=כ
+geolocation.requestMessage=%S מעוניינים לדעת איפה אתה. ספר להם -
