czech localization update

--- a/cs/security/manager/chrome/pipnss/pipnss.properties
+++ b/cs/security/manager/chrome/pipnss/pipnss.properties
@@ -121,6 +121,8 @@ CertDumpUserID=UID
 CertDumpPK9Email=E
 CertDumpAVADN=DN
 CertDumpAVADC=DC
+CertDumpSurname=Příjmení
+CertDumpGivenName=Jméno
 CertDumpValidity=Platnost
 CertDumpNotBefore=Platnost od
 CertDumpNotAfter=Platnost do
