--- a/cs/browser/chrome/browser/aboutRights.properties
+++ b/cs/browser/chrome/browser/aboutRights.properties
@@ -1,3 +1,3 @@
-buttonLabel=Znáte svá práva…
-buttonAccessKey=Z
-notifyRightsText=%S je svobodný a otevřený software od neziskové nadace Mozilla Foundation.
+buttonLabel=Poznejte svá práva…
+buttonAccessKey=P
+notifyRightsText=%S je svobodný software s otevřeným zdrojovým kódem od Mozilla Foundation.
