--- a/cs/mail/chrome/messenger/aboutRights.properties
+++ b/cs/mail/chrome/messenger/aboutRights.properties
@@ -2,4 +2,4 @@ aboutRightsTitle=O vašich právech
 buttonLabel=Poznejte svá práva…
 buttonAccessKey=P
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
-notifyText=%S je svobodný a otevřený software poskytovaný neziskovanou nadací Mozilla Foundation.
+notifyRightsText=%S je svobodný software s otevřeným zdrojovým kódem od Mozilla Foundation.
