--- a/ca/mobile/chrome/browser.properties
+++ b/ca/mobile/chrome/browser.properties
@@ -1,29 +1,29 @@
 # Popup Blocker
-popupWarning=%S prevented this site from opening a pop-up window.
-popupWarningMultiple=%S prevented this site from opening %S pop-up windows.
-popupButtonAlwaysAllow=Always Allow
-popupButtonAlwaysAllow.accesskey=A
-popupButtonNeverWarn=Never tell me
+popupWarning=El %S ha evitat que aquest lloc obri una finestra emergent.
+popupWarningMultiple=El %S ha evitat que aquest lloc obri %S finestres emergents.
+popupButtonAlwaysAllow=Permet-ho sempre
+popupButtonAlwaysAllow.accesskey=P
+popupButtonNeverWarn=No m'ho demanis mai
 popupButtonNeverWarn.accesskey=N
 
 # XPInstall
-xpinstallPromptWarning=%S prevented this site (%S) from asking you to install software on your computer.
-xpinstallPromptAllowButton=Allow
-xpinstallPromptAllowButton.accesskey=A
-xpinstallDisabledMessageLocked=Software installation has been disabled by your system administrator.
-xpinstallDisabledMessage=Software installation is currently disabled. Click Enable and try again.
-xpinstallDisabledButton=Enable
-xpinstallDisabledButton.accesskey=n
+xpinstallPromptWarning=El %S ha evitat que aquest lloc (%S) us demani instaŀlar programari al vostre ordinador.
+xpinstallPromptAllowButton=Permet-ho
+xpinstallPromptAllowButton.accesskey=P
+xpinstallDisabledMessageLocked=El vostre administrador de sistemes ha inhabilitat la instaŀlació de programari.
+xpinstallDisabledMessage=La instaŀlació de programari està inhabilitada. Feu clic a Habilita-la i torneu-ho a provar.
+xpinstallDisabledButton=Habilita-la
+xpinstallDisabledButton.accesskey=H
 
 # Site Identity
-identity.identified.verifier=Verified by: %S
-identity.identified.verified_by_you=You have added a security exception for this site
+identity.identified.verifier=Verificat per: %S
+identity.identified.verified_by_you=Hey afegit una excepció de seguretat per al lloc
 identity.identified.state_and_country=%S, %S
 identity.identified.title_with_country=%S (%S)
-identity.encrypted=Your connection to this web site is encrypted to prevent eavesdropping.
-identity.unencrypted=Your connection to this web site is not encrypted.
-identity.unknown.tooltip=This web site does not supply identity information.
-identity.ownerUnknown2=(unknown)
+identity.encrypted=La connexió a aquest lloc web està xifrada per a prevenir la intercepció per tercers.
+identity.unencrypted=La vostra connexió a aquest lloc web no està xifrada.
+identity.unknown.tooltip=Aquest lloc web no proporciona cap informació d'identitat.
+identity.ownerUnknown2=(desconegut)
 
 # Geolocation UI
 # LOCALIZATION NOTE (exactLocation, neighborhoodLocation): These do not have to be
@@ -31,12 +31,12 @@ identity.ownerUnknown2=(unknown)
 # examples: Neighborhood (within 2 km)
 #           Exact Location (within 3 m)
 #
-geolocation.exactLocation=Exact Location
-geolocation.exactLocation.subLabel=within 10 feet
+geolocation.exactLocation=Ubicació exacta
+geolocation.exactLocation.subLabel=En 3 metres
 geolocation.exactLocationKey=E
-geolocation.neighborhoodLocation=Neighborhood
-geolocation.neighborhoodLocation.subLabel=within 1 mile
-geolocation.neighborhoodLocationKey=N
-geolocation.nothingLocation=Nothing
+geolocation.neighborhoodLocation=Veïnat
+geolocation.neighborhoodLocation.subLabel=En 2 km
+geolocation.neighborhoodLocationKey=n
+geolocation.nothingLocation=Cap
 geolocation.nothingLocationKey=C
-geolocation.requestMessage=%S wants to know where you are.  Tell them:
+geolocation.requestMessage=El %S vol saber on us ho trobeu. Digueu-li-ho:
