security CertDumpSurname=Surname CertDumpGivenName=Given Name

--- a/fy-NL/security/manager/chrome/pipnss/pipnss.properties
+++ b/fy-NL/security/manager/chrome/pipnss/pipnss.properties
@@ -121,6 +121,8 @@ CertDumpUserID=UID
 CertDumpPK9Email=E
 CertDumpAVADN=DN
 CertDumpAVADC=DC
+CertDumpSurname=Efternamme
+CertDumpGivenName=Foarnamme
 CertDumpValidity=Jildichheid
 CertDumpNotBefore=Net foar
 CertDumpNotAfter=Net nei
