l10n for Bug 357593 - PSM cannot display givenName and surname in DNs

--- a/pl/security/manager/chrome/pipnss/pipnss.properties
+++ b/pl/security/manager/chrome/pipnss/pipnss.properties
@@ -101,6 +101,8 @@ CertDumpUserID=UID
 CertDumpPK9Email=E
 CertDumpAVADN=DN
 CertDumpAVADC=DC
+CertDumpSurname=Nazwisko
+CertDumpGivenName=Imię
 CertDumpValidity=Ważność
 CertDumpNotBefore=Nieważny przed
 CertDumpNotAfter=Nieważny po
