--- a/pl/browser/chrome/browser/aboutRights.properties
+++ b/pl/browser/chrome/browser/aboutRights.properties
@@ -1,3 +1,3 @@
 buttonLabel = Poznaj swoje prawa…
 buttonAccessKey = P
-notifyText = %S to wolne i otwarte oprogramowanie tworzone przez Mozilla Foundation, organizację non-profit.
+notifyRightsText = %S to wolne oprogramowanie open source tworzone przez Mozilla Foundation, organizację non-profit.
