Update nb-NO l10n

--- a/nb-NO/mail/chrome/messenger/aboutRights.properties
+++ b/nb-NO/mail/chrome/messenger/aboutRights.properties
@@ -2,4 +2,4 @@ aboutRightsTitle=Om dine rettigheter
 buttonLabel=Kjenn dine rettigheter …
 buttonAccessKey=K
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
-notifyText=%S er fri og åpen programvare fra den ideelle organisasjonen Mozilla Foundation.
+notifyRightsText=%S er fri og åpen programvare fra den ideelle organisasjonen Mozilla Foundation.
