--- a/ro/mobile/chrome/browser.properties
+++ b/ro/mobile/chrome/browser.properties
@@ -1,3 +1,7 @@
+# Bookmarks
+editBookmarkAddFolder=Adaugă un dosar nou
+editBookmarkNewFolder=Dosar nou
+
 # Popup Blocker
 popupWarning=%S a împiedicat acest sait să deschidă o fereastră popup.
 popupWarningMultiple=%S a împiedicat acest sait să deschidă %S ferestre popup.
