--- a/ro/mobile/chrome/shortcuts.properties
+++ b/ro/mobile/chrome/shortcuts.properties
@@ -12,9 +12,9 @@ cmd_findAgain.name=Caută din nou
 cmd_findPrevious.name=Caută înapoi
 cmd_menu.name=Arată meniul
 cmd_fullscreen.name=Pe tot ecranul
-cmd_scrollPageUp.name=Page up
+cmd_scrollPageUp.name=Pagină în sus
 cmd_scrollToBeginning.name=Mergi la început
-cmd_scrollPageDown.name=Page down
+cmd_scrollPageDown.name=Pagină în jos
 cmd_scrollToEnd.name=Mergi la capăt
 cmd_cut.name=Taie
 cmd_copy.name=Copiază
