--- a/ro/calendar/chrome/calendar/calendar.properties
+++ b/ro/calendar/chrome/calendar/calendar.properties
@@ -574,8 +574,8 @@ datetimeIntervalTaskWithoutDueDate=dată de început %1$S %2$S
 datetimeIntervalTaskWithoutStartDate=dată de sfârșit %1$S %2$S
 
 deleteTaskLabel=Șterge sarcina de lucru
-deleteTaskAccesskey=Ș
+deleteTaskAccesskey=t
 deleteItemLabel=Șterge
-deleteItemAccesskey=Ș
+deleteItemAccesskey=t
 deleteEventLabel=Șterge evenimentul
 deleteEventAccesskey=l
