--- a/ro/calendar/chrome/calendar/providers/gdata/gdata.properties
+++ b/ro/calendar/chrome/calendar/providers/gdata/gdata.properties
@@ -45,8 +45,8 @@
 # localized versions of the Google Calendar UI.
 
 # Extension Manager strings
-extensions.{a62ef8ec-5fdc-40c2-873c-223b8a6925cc}.description=Allows bidirectional access to Google Calendar
-extensions.{a62ef8ec-5fdc-40c2-873c-223b8a6925cc}.name=Provider for Google Calendar
+extensions.{a62ef8ec-5fdc-40c2-873c-223b8a6925cc}.description=Permite acces bidirecțional la Google Calendar
+extensions.{a62ef8ec-5fdc-40c2-873c-223b8a6925cc}.name=Furnizor pentru Google Calendar
 
 # Dialog strings
 loginDialogTitle=Autentificare pentru calendarul Google
