--- a/sk/mobile/chrome/browser.properties
+++ b/sk/mobile/chrome/browser.properties
@@ -1,3 +1,7 @@
+# Bookmarks
+editBookmarkAddFolder=Pridať nový priečinok
+editBookmarkNewFolder=Nový priečinok
+
 # Popup Blocker
 popupWarning=%S zabránil tejto stránke v otvorení vyskakovacieho okna.
 popupWarningMultiple=%S zabránil tejto stránke v otvorení %S vyskakovacích okien.
