--- a/sk/browser/chrome/browser/aboutRights.properties
+++ b/sk/browser/chrome/browser/aboutRights.properties
@@ -1,3 +1,3 @@
 buttonLabel = Spoznajte svoje práva…
 buttonAccessKey = a
-notifyText = %S je voľne šírený otvorený softvér od neziskovej organizácie Mozilla Foundation.
+notifyRightsText = %S je voľne šírený softvér s otvoreným zdrojovým kódom od neziskovej organizácie Mozilla Foundation.
