--- a/ro/browser/chrome/browser/browser.properties
+++ b/ro/browser/chrome/browser/browser.properties
@@ -5,6 +5,7 @@ openFile=Deschide fișier
 
 droponbookmarksbutton=Plasați o legătură pentru a-i pune semn de carte
 dropondownloadsbutton=Plasați o legătură sau un fișier pentru a-l descărca
+droponnewtabbutton=Plasați o legătură sau un fișier pentru deschidere într-o filă nouă
 droponnewwindowbutton=Plasați o legătură sau un fișier pentru deschidere într-o fereastră nouă
 droponhomebutton=Plasați o legătură sau un fișier pentru a-l face pagina de start
 droponhometitle=Stabilire pagină de start
@@ -73,9 +74,7 @@ updatesItem_pending=Aplică actualizarea descărcată acum...
 updatesItem_pendingFallback=Aplică actualizarea descărcată acum...
 
 # RSS Pretty Print
-feedNoFeeds=Pagina nu oferă fluxuri
 feedShowFeedNew=Abonare la „%S”...
-feedHasFeedsNew=Abonare la această pagină...
 
 # History menu
 menuOpenAllInTabs.label=Deschide toate în file
