--- a/ro/browser/chrome/browser/preferences/preferences.properties
+++ b/ro/browser/chrome/browser/preferences/preferences.properties
@@ -81,7 +81,7 @@ hostColon=Gazdă:
 domainColon=Domeniu:
 forSecureOnly=Doar conexiuni criptate
 forAnyConnection=Orice tip de conexiune
-AtEndOfSession = la încheierea sesiunii
+expireAtEndOfSession=La sfârșitul sesiunii
 can=Permite
 canSession=Permite pentru sesiune
 cannot=Blochează
