--- a/ro/security/manager/chrome/pipnss/nsserrors.properties
+++ b/ro/security/manager/chrome/pipnss/nsserrors.properties
@@ -19,7 +19,7 @@ SSL_ERROR_SSL_DISABLED=Nu se poate conecta: SSL este dezactivat.
 SSL_ERROR_FORTEZZA_PQG=Conectare imposibilă: partenerul SSL este într-un alt domeniu FORTEZZA.
 SSL_ERROR_UNKNOWN_CIPHER_SUITE=S-a cerut o suită necunoscută de cifrare SSL.
 SSL_ERROR_NO_CIPHERS_SUPPORTED=Nu sunt prezente și activate în acest program niciun fel de suite de cifrare.
-SSL_ERROR_BAD_BLOCK_PADDING=SSL received a record with bad block padding.
+SSL_ERROR_BAD_BLOCK_PADDING=SSL a primit o listă cu o completare greșită a fragmentelor.
 SSL_ERROR_RX_RECORD_TOO_LONG=SSL a primit o înregistrare care depășește lungimea maximă permisă.
 SSL_ERROR_TX_RECORD_TOO_LONG=SSL a încercat să trimită o listă care depășește lungimea maximă permisă.
 SSL_ERROR_RX_MALFORMED_HELLO_REQUEST=SSL a primit un mesaj incorect în urma cererii de negociere Hello.
@@ -33,11 +33,11 @@ SSL_ERROR_RX_MALFORMED_CERT_VERIFY=SSL received a malformed Certificate Verify h
 SSL_ERROR_RX_MALFORMED_CLIENT_KEY_EXCH=SSL received a malformed Client Key Exchange handshake message.
 SSL_ERROR_RX_MALFORMED_FINISHED=SSL received a malformed Finished handshake message.
 SSL_ERROR_RX_MALFORMED_CHANGE_CIPHER=SSL received a malformed Change Cipher Spec record.
-SSL_ERROR_RX_MALFORMED_ALERT=SSL received a malformed Alert record.
-SSL_ERROR_RX_MALFORMED_HANDSHAKE=SSL received a malformed Handshake record.
-SSL_ERROR_RX_MALFORMED_APPLICATION_DATA=SSL received a malformed Application Data record.
-SSL_ERROR_RX_UNEXPECTED_HELLO_REQUEST=SSL received an unexpected Hello Request handshake message.
-SSL_ERROR_RX_UNEXPECTED_CLIENT_HELLO=SSL received an unexpected Client Hello handshake message.
+SSL_ERROR_RX_MALFORMED_ALERT=SSL a primit o înregistrare de tip Alert formatată greșit.
+SSL_ERROR_RX_MALFORMED_HANDSHAKE=SSL a primit o înregistrare de tip Handshake formatată greșit.
+SSL_ERROR_RX_MALFORMED_APPLICATION_DATA=SSL a primit o înregistrare de tip Application Data formatată greșit.
+SSL_ERROR_RX_UNEXPECTED_HELLO_REQUEST=SSL a primit un mesaj neașteptat de negociere de tip Hello Request.
+SSL_ERROR_RX_UNEXPECTED_CLIENT_HELLO=SSL a primit un mesaje de negociere neașteptat de tip Client Hello.
 SSL_ERROR_RX_UNEXPECTED_SERVER_HELLO=SSL received an unexpected Server Hello handshake message.
 SSL_ERROR_RX_UNEXPECTED_CERTIFICATE=SSL received an unexpected Certificate handshake message.
 SSL_ERROR_RX_UNEXPECTED_SERVER_KEY_EXCH=SSL received an unexpected Server Key Exchange handshake message.
