--- a/ro/toolkit/chrome/mozapps/update/updates.properties
+++ b/ro/toolkit/chrome/mozapps/update/updates.properties
@@ -30,7 +30,7 @@ resumePausedAfterCloseMsg=Ați suspendat descărcarea acestei actualizări. Dori
 updaterIOErrorTitle=Actualizarea programului a eșuat
 updaterIOErrorMsg=Unul sau mai multe fișiere nu au putut fi actualizate. Vă rugăm asigurați-vă că orice alte aplicații sunt închise și că aveți permisiunea de a modifica fișiere, apoi reporniți %S pentru a încerca din nou.
 okButton=În regulă
-okButton.accesskey=Î
+okButton.accesskey=n
 askLaterButton=Întreabă-mă mai târziu
 askLaterButton.accesskey=a
 noThanksButton=Nu, mulțumesc
@@ -40,7 +40,7 @@ updateButton_minor.accesskey=u
 updateButton_major=Ia versiunea nouă
 updateButton_major.accesskey=I
 backButton=Înapoi
-backButton.accesskey=Î
+backButton.accesskey=n
 acceptTermsButton=Accept termenii
 acceptTermsButton.accesskey=A
 restartLaterButton=Repornește mai târziu
