--- a/ro/browser/chrome/browser/aboutRights.properties
+++ b/ro/browser/chrome/browser/aboutRights.properties
@@ -1,3 +1,3 @@
 buttonLabel = Cunoașteți-vă drepturile…
 buttonAccessKey = d
-notifyText = %S este software liber și deschis oferit de fundația non-profit Mozilla Foundation.
+notifyRightsText = %S este software liber cu sursa deschisă oferit de fundația non-profit Mozilla Foundation.
