--- a/ro/browser/installer/custom.properties
+++ b/ro/browser/installer/custom.properties
@@ -77,7 +77,7 @@ WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName trebuie să fie închis pentru
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName rulează deja.\n\nVă rugăm să închideți $BrandShortName înainte de a lansa versiunea pe care tocmai ați instalat-o.
 WARN_WRITE_ACCESS=Nu aveți drepturi de scriere în directorul de instalare.\n\nApăsați „OK” pentru a alege un alt director.
 WARN_DISK_SPACE=Nu aveți spațiu suficient pe disc pentru a instala în acest loc.\n\nApăsați „OK” pentru a alege un alt loc.
-WARN_UNSUPPORTED_MSG=Ne pare rău, $BrandShortName nu poate fi instalat. Această versiune de $BrandShortName necesită ${MinUnsupportedVer} sau o versiune mai nouă.
+WARN_MIN_SUPPORTED_OS_MSG=Ne pare rău, $BrandShortName nu poate fi instalat. Această versiune de $BrandShortName necesită ${MinSupportedVer} sau mai nou.
 WARN_RESTART_REQUIRED_UNINSTALL=Calculatorul dumneavoastră trebuie repornit pentru a încheia o dezinstalare anterioară de $BrandShortName. Doriți să reporniți acum?
 WARN_RESTART_REQUIRED_UPGRADE=Calculatorul dumneavoastră trebuie repornit pentru a încheia o actualizare mai veche de $BrandShortName. Doriți să reporniți calculatorul acum?
 ERROR_CREATE_DIRECTORY_PREFIX=Eroarea la crearea directorului:
