--- a/ro/browser/updater/updater.ini
+++ b/ro/browser/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Actualizare program
-Info=Se instalează actualizările. Firefox va porni în câteva momente ...
+TitleText=Actualizare %MOZ_APP_DISPLAYNAME%
+InfoText=%MOZ_APP_DISPLAYNAME% instalează actualizările și va porni în câteva momente…
