--- a/ro/security/manager/chrome/pipnss/pipnss.properties
+++ b/ro/security/manager/chrome/pipnss/pipnss.properties
@@ -121,6 +121,8 @@ CertDumpUserID=UID
 CertDumpPK9Email=E
 CertDumpAVADN=DN
 CertDumpAVADC=DC
+CertDumpSurname=Surname
+CertDumpGivenName=Given Name
 CertDumpValidity=Valabilitate
 CertDumpNotBefore=Nu înainte de
 CertDumpNotAfter=Nu după
