added basefiles and some new strings for fennec

--- a/fy-NL/mobile/chrome/browser.properties
+++ b/fy-NL/mobile/chrome/browser.properties
@@ -1,3 +1,7 @@
+# Bookmarks
+editBookmarkAddFolder=Foech nije map ta
+editBookmarkNewFolder=Nije map
+
 # Popup Blocker
 popupWarning=%S hat opkeard dat dit webstee in pop-up skerm iepene.
 popupWarningMultiple=%S hat opkeard dat dit webstee %S pop-up skermen iepene.
