--- a/fy-NL/mobile/chrome/shortcuts.properties
+++ b/fy-NL/mobile/chrome/shortcuts.properties
@@ -4,6 +4,7 @@ cmd_reload.name=Side werlade
 cmd_stop.name=Werlade stopje
 cmd_search.name=Sykje
 cmd_go.name=Laad URL
+cmd_openLocation.name=Iepenje lokaasje
 cmd_star.name=Side stjer jaan
 cmd_bookmarks.name=Bl\u00EAdwizers toane
 cmd_find.name=Fyn yn side
@@ -26,3 +27,5 @@ cmd_closeTab.name=Sl\u00FAt aktuele ljepbl\u00EAd
 cmd_actions.name=Iepenje aksjelist
 cmd_panel.name=Iepenje paniel mei spul
 cmd_sanitize.name=Smyt alle bewarre persoanlike ynformaasje fuort
+cmd_zoomin.name=Ynzoome
+cmd_zoomout.name=Utzoome
