L10n for bug 310359 - Search all address fields capability (Bcc:s too!).

--- a/sv-SE/mail/chrome/messenger/search-attributes.properties
+++ b/sv-SE/mail/chrome/messenger/search-attributes.properties
@@ -77,7 +77,7 @@
 40=reserverad för AB
 41=reserverad för AB
 42=reserverad för AB
-43=reserverad för AB
+43=Från, Till eller Kopia
 44=Skräppoängens ursprung
 45=Skräpprocent
 46=Status för bifogad fil
