Bug 476175 - Add search bar to Cookie Manager (Stored Cookies tab).

--- a/fr/suite/chrome/common/permissions/cookieViewer.properties
+++ b/fr/suite/chrome/common/permissions/cookieViewer.properties
@@ -53,3 +53,7 @@ deleteAllCookiesYes=&Supprimer
 deleteAllCookiesSites=Voulez-vous vraiment supprimer tous les sites avec cookies ?
 deleteAllSitesTitle=Supprimer tous les sites
 deleteAllSitesYes=&Supprimer
+
+deleteSelectedCookies=Voulez-vous vraiment supprimer les cookies sélectionnés ?
+deleteSelectedCookiesTitle=Supprimer les cookies sélectionnés
+deleteSelectedCookiesYes=&Supprimer
