--- a/fy-NL/mail/updater/updater.ini
+++ b/fy-NL/mail/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Programma fernijing
-Info=Thunderbird ynstallearret de fernijings en sil oer yn in momint starte...
+Title=Programmafernijing
+Info=Thunderbird ynstallearret de fernijings en sil dêrnei útein sette...
