Bug 376089: open .eml files from the command line using relative path fails.

--- a/de/mail/chrome/messenger/messenger.properties
+++ b/de/mail/chrome/messenger/messenger.properties
@@ -462,6 +462,11 @@ emptyTrashDontAsk=Nicht mehr danach fragen
 junkAnalysisPercentComplete=Junk-Analyse zu %S abgeschlossen
 processingJunkMessages=Junk-Nachrichten werden bearbeitet
 
+# Messenger bootstrapping messages
+fileNotFoundTitle = Datei nicht gefunden
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = Die Datei %S wurde nicht gefunden.
+
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 headerFieldYou=Sie
