Bug 310359 - "search all address fields capability (Bcc:s too!)" - First part, implement 'From, To or CC' for local search

--- a/de/mail/chrome/messenger/search-attributes.properties
+++ b/de/mail/chrome/messenger/search-attributes.properties
@@ -47,7 +47,7 @@
 40=reserviert für AB
 41=reserviert für AB
 42=reserviert für AB
-43=reserviert für AB
+43=Von, An oder CC
 44=Ursprung der Junk-Bewertung
 45=Prozentuale Junk-Bewertung
 46=Anhang-Status
