Bug 376089: open .eml files from the command line using relative path fails.

--- a/fr/suite/chrome/mailnews/messenger.properties
+++ b/fr/suite/chrome/mailnews/messenger.properties
@@ -423,3 +423,8 @@ emptyTrashDontAsk=Ne plus redemander.
 # junkCommands.js
 junkAnalysisPercentComplete=Analyse des messages indésirables terminée à %S
 processingJunkMessages=Traitement des messages indésirables en cours
+
+# Messenger bootstrapping messages
+fileNotFoundTitle = Fichier introuvable
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = Le fichier %S n'existe pas.
