Bug 474917 - Update status bar when dragging in/out of New Tab button. r=gavin

--- a/nl/browser/chrome/browser/browser.properties
+++ b/nl/browser/chrome/browser/browser.properties
@@ -5,6 +5,7 @@ openFile=Bestand openen
 
 droponbookmarksbutton=Versleep een koppeling om er een bladwijzer voor te maken
 dropondownloadsbutton=Versleep een koppeling of bestand om het op te halen
+droponnewtabbutton=Versleep een koppeling of bestand om het te openen in een nieuw tabblad
 droponnewwindowbutton=Versleep een koppeling of bestand om het te openen in een nieuw venster
 droponhomebutton=Versleep een koppeling of bestand om het tot uw startpagina te maken
 droponhometitle=Startpagina instellen
