--- a/fr/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/fr/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,32 +1,36 @@
-# Status strings used in the subscribe dialog
-
-subscribe-validating=Vérification du fil RSS…
+subscribe-validating-feed=Vérification du fil…
 subscribe-cancelSubscription=Voulez-vous vraiment annuler l'abonnement au fil en cours ?
 subscribe-cancelSubscriptionTitle=Abonnement à un fil…
-subscribe-noFeedSelected=<aucun fil RSS sélectionné>
+subscribe-noFeedIsSelected=<aucun fil sélectionné>
 subscribe-feedAlreadySubscribed=Vous êtes déjà abonné à ce fil.
 subscribe-errorOpeningFile=Impossible d'ouvrir le fichier.
 
 subscribe-OPMLImportTitle=Choisissez le fichier OPML à importer
-subscribe-OPMLExportTitle=Exporter le fils dans un fichier OPML
-subscribe-OPMLExportFileTitle=Export OPML de Thunderbird
-subscribe-OPMLExportFileName=MonFilThunderbird.opml
-#LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
+subscribe-OPMLExportTitle=Exporter les fils dans un fichier OPML
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileDialogTitle=Export OPML de %S
+## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
+subscribe-OPMLExportDefaultFileName=MonFil%S.opml
+## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
 subscribe-errorInvalidOPMLFile=Ou bien %S n'est pas un fichier OPML valide ou une erreur s'est produite lors de l'importation du fichier.
 
 subscribe-OPMLExportOPMLFilesFilterText=Fichiers OPML
 
-#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletionTitle=Supprimer le fil
+## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletion=Voulez-vous vraiment vous désabonner du fil : \n %S?
 
-# when downloading new feed items from the subscribe dialog. 
-# LOCALIZATION NOTE: Do not translate %d in the following line.
-# The first %S will receive the number of messages received so far;
-# the second %S will receive the total number of messages
-subscribe-fetchingFeedItems=Téléchargement des articles du fil (%S sur %S)
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+##  - The first %S is the number of articles processed so far;
+##  - The second %S is the total number of items
+subscribe-gettingFeedItems=Téléchargement des articles du fil (%S sur %S)…
 
 newsblog-noNewArticlesForFeed=Il n'y a aucun nouvel article pour ce fil.
+newsblog-networkErrorTitle=Erreur réseau
+## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
 newsblog-networkError=Impossible de trouver %S. Veuillez vérifier le nom et essayer à nouveau.
-newsblog-invalidFeed=%S n'est pas un fil RSS valide.
-newsblog-getNewMailCheck=Recherche des nouveaux éléments dans les fils RSS
+
+newsblog-feedNotValidTitle=Fil invalide
+## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+newsblog-feedNotValid=%S n'est pas un fil valide.
+newsblog-getNewMsgsCheck=Recherche des nouveaux éléments dans les fils…
