reviewing and harmonisation of fennec localisation and firefox localisation

--- a/fr/mobile/chrome/shortcuts.properties
+++ b/fr/mobile/chrome/shortcuts.properties
@@ -1,5 +1,5 @@
-cmd_back.name=Précédente
-cmd_forward.name=Suivante
+cmd_back.name=Retour en arrière
+cmd_forward.name=Avancer
 cmd_reload.name=Actualiser la page
 cmd_stop.name=Arrêter le chargement
 cmd_search.name=Rechercher
@@ -7,14 +7,14 @@ cmd_go.name=Charger l'URL
 cmd_openLocation.name=Ouvrir l'emplacement
 cmd_star.name=Marquer la page
 cmd_bookmarks.name=Afficher les marque-pages
-cmd_find.name=Chercher dans la page
-cmd_findAgain.name=Chercher à nouveau
-cmd_findPrevious.name=Chercher précédent
+cmd_find.name=Rechercher dans la page
+cmd_findAgain.name=Rehercher à nouveau
+cmd_findPrevious.name=Rehercher précédent
 cmd_menu.name=Afficher le menu
 cmd_fullscreen.name=Plein écran
-cmd_scrollPageUp.name=Page précédente
+cmd_scrollPageUp.name=Défiler une page vers le haut
 cmd_scrollToBeginning.name=Faire défiler jusqu'au début
-cmd_scrollPageDown.name=Page suivante
+cmd_scrollPageDown.name=Défiler une page vers le bas
 cmd_scrollToEnd.name=Faire défiler jusqu'à la fin
 cmd_cut.name=Couper
 cmd_copy.name=Copier
