--- a/fr/mobile/chrome/shortcuts.properties
+++ b/fr/mobile/chrome/shortcuts.properties
@@ -8,13 +8,13 @@ cmd_openLocation.name=Ouvrir l'emplacement
 cmd_star.name=Marquer la page
 cmd_bookmarks.name=Afficher les marque-pages
 cmd_find.name=Rechercher dans la page
-cmd_findAgain.name=Rehercher à nouveau
-cmd_findPrevious.name=Rehercher précédent
+cmd_findAgain.name=Rechercher à nouveau
+cmd_findPrevious.name=Rechercher précédent
 cmd_menu.name=Afficher le menu
 cmd_fullscreen.name=Plein écran
-cmd_scrollPageUp.name=Défiler une page vers le haut
+cmd_scrollPageUp.name=Faire défiler d'une page vers le haut
 cmd_scrollToBeginning.name=Faire défiler jusqu'au début
-cmd_scrollPageDown.name=Défiler une page vers le bas
+cmd_scrollPageDown.name=Faire défiler d'une page vers le bas
 cmd_scrollToEnd.name=Faire défiler jusqu'à la fin
 cmd_cut.name=Couper
 cmd_copy.name=Copier
